# unsafe-function-remover

./: .gitignore  CMakeLists.txt  main.cpp  test.c
